working on mounting r/w layer
