# lib/apiservers/portlayer/swagger.json
@@ -319,14 +319,7 @@
 						"x-nullable": false
 					},
 					{
-						"name":"absTargetPath",
-						"in":"query",
-						"required": true,
-						"type": "string",
-						"x-nullable": false
-					},
-					{
-						"name":"relativeTargetPath",
+						"name":"targetPath",
 						"in":"query",
 						"required": true,
 						"type": "string",
